--- a/Lagoon.Web/Views/Villa/index.cshtml
+++ b/Lagoon.Web/Views/Villa/index.cshtml
@@ -1,31 +1,44 @@
-
 @{
   @* using Lagoon.Domain.Entity; *@
   @model IEnumerable<Lagoon.Domain.Entity.Villa>
-    @* ViewData["Title"] = "Home Page"; *@
+  @* ViewData["Title"] = "Home Page"; *@
 }
-
-<div class="text-center">
-  <h1 class="display-4">Villa List</h1>
+<div class="w-100 border-0 p-4">
+  <div class="card-header bg-success bg-gradient ml-0 py-3">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h1 class="text-white py-2">Villa List</h1>
+      </div>
+    </div>
+  </div>
+  <div class="card-body border p-2">
+    <div class="row pb-3">
+      <div class="col-6 offset-6 text-end">
+        <a asp-controller="Villa" asp-action="#" class="btn btn-secondary">
+          <i class="bi bi-plus-circle"></i> Create New Villa
+        </a>
+      </div>
+    </div>
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Sqft</th>
+          <th>Desc</th>
+        </tr>
+      </thead>
+      <tbody>
+        @foreach (var obj in Model)
+        {
+          <tr>
+            <td>@obj.Name</td>
+            <td>@obj.Price</td>
+            <td>@obj.Sqft</td>
+            <td>@obj.Desc</td>
+          </tr>
+        }
+      </tbody>
+    </table>
+  </div>
 </div>
-<table class="table table-bordered table-striped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Sqft</th>
-      <th>Desc</th>
-    </tr>
-  </thead>
-  <tbody>
-    @foreach(var obj in Model)
-    {
-      <tr>
-        <td>@obj.Name</td>
-        <td>@obj.Price</td>
-        <td>@obj.Sqft</td>
-        <td>@obj.Desc</td>
-      </tr>
-    }
-  </tbody>
-</table>
