--- a/Lagoon.Web/Views/Villa/index.cshtml
+++ b/Lagoon.Web/Views/Villa/index.cshtml
@@ -14,7 +14,7 @@
   <div class="card-body border p-2">
     <div class="row pb-3">
       <div class="col-6 offset-6 text-end">
-        <a asp-controller="Villa" asp-action="#" class="btn btn-secondary">
+        <a asp-controller="Villa" asp-action="Create" class="btn btn-secondary">
           <i class="bi bi-plus-circle"></i> Create New Villa
         </a>
       </div>
