--- a/Lagoon.Web/Views/Villa/Create.cshtml
+++ b/Lagoon.Web/Views/Villa/Create.cshtml
@@ -13,31 +13,33 @@
   </div>
   <div class="card-body border p-2">
     <form method="post" class="row">
-      <div class="p-3">
+      <div class="form-floating py-1 col-md-6">
+        <input asp-for="Name" class="form-control border shadow" />
+        <label asp-for="Name" class="ms-2"></label>
+      </div>
+      <div class="form-floating py-1 col-md-6">
+        <input asp-for="Price" class="form-control border shadow" />
+        <label asp-for="Price" class="ms-2"></label>
+      </div>
+      <div class="form-floating py-1 col-md-6">
+        <input asp-for="Sqft" class="form-control border shadow" />
+        <label asp-for="Sqft" class="ms-2"></label>
+      </div>
+      <div class="form-floating py-1 col-md-6">
+        <input asp-for="Occupancy" class="form-control border shadow" />
+        <label asp-for="Occupancy" class="ms-2"></label>
+      </div>
+      <div class="form-floating py-1 col-md-6">
+        <input asp-for="Desc" class="form-control border shadow" />
+        <label asp-for="Desc" class="ms-2"></label>
+      </div>
+      <div class="form-floating py-1 col-md-6">
+        <input asp-for="ImageUrl" class="form-control border shadow" />
+        <label asp-for="ImageUrl" class="ms-2"></label>
+      </div>
+      
+      <div class="col-12 mt-2">
         <div class="row">
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="Name" class="form-control border shadow" />
-            <label asp-for="Name" class="ms-2"></label>
-          </div>
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="Price" class="form-control border shadow" />
-            <label asp-for="Price" class="ms-2"></label>
-          </div>
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="Desc" class="form-control border shadow" />
-            <label asp-for="Desc" class="ms-2"></label>
-          </div>
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="Sqft" class="form-control border shadow" />
-            <label asp-for="Sqft" class="ms-2"></label>
-          </div>
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="ImageUrl" class="form-control border shadow" />
-            <label asp-for="ImageUrl" class="ms-2"></label>
-          </div>
-        </div>
-
-        <div class="row pt-2">
           <div class="col-6 col-md-3">
             <button type="submit" class="btn btn-success w-100">
               Create
