--- a/Lagoon.Web/Views/Villa/index.cshtml
+++ b/Lagoon.Web/Views/Villa/index.cshtml
@@ -25,6 +25,7 @@
           <th>Name</th>
           <th>Price</th>
           <th>Sqft</th>
+          <th>Occupancy</th>
           <th>Desc</th>
         </tr>
       </thead>
@@ -35,7 +36,18 @@
             <td>@obj.Name</td>
             <td>@obj.Price</td>
             <td>@obj.Sqft</td>
+            <td>@obj.Occupancy</td>
             <td>@obj.Desc</td>
+            <td>
+              <div class="w-100 btn-group text-nowrap" role="group">
+                <a asp-asp-controller="Villa" asp-action="Update" asp-route-id="@obj.ID">
+                  <i class="bi bi-pencil-square"></i> Edit
+                </a>
+                <a asp-asp-controller="Villa" asp-action="Delete" asp-route-id="@obj.ID">
+                  <i class="bi bi-trash-fill"></i> Delete
+                </a>
+              </div>
+            </td>
           </tr>
         }
       </tbody>
