--- a/Lagoon.Web/Views/Shared/Error.cshtml
+++ b/Lagoon.Web/Views/Shared/Error.cshtml
@@ -1,4 +1,16 @@
-﻿@model ErrorViewModel
+﻿<div class="w-100 border-0 p-4">
+  <div class="card-header bg-success bg-gradient ml-0 py-3">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h1 class="text-white py-2">Not Found</h1>
+      </div>
+    </div>
+  </div>
+  <div class="card-body border p-2">
+    The Resource you are looking for Not Found
+  </div>
+</div>
+@* @model ErrorViewModel
 @{
   ViewData["Title"] = "Error";
 }
@@ -22,4 +34,4 @@
   It can result in displaying sensitive information from exceptions to end users.
   For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
   and restarting the app.
-</p>
+</p> *@
