--- a/Lagoon.Web/Views/Villa/Update.cshtml
+++ b/Lagoon.Web/Views/Villa/Update.cshtml
@@ -7,13 +7,13 @@
   <div class="card-header bg-success bg-gradient ml-0 py-3">
     <div class="row">
       <div class="col-12 text-center">
-        <h1 class="text-white py-2">Create Villa</h1>
+        <h1 class="text-white py-2">Update Villa</h1>
       </div>
     </div>
   </div>
   <div class="card-body border p-2">
     <form method="post" class="row">
-     
+      <input asp-for="ID" hidden />
       <div class="form-floating py-1 col-md-6">
         <input asp-for="Name" class="form-control border shadow" />
         <label asp-for="Name" class="ms-2"></label>
@@ -44,15 +44,15 @@
         <label asp-for="ImageUrl" class="ms-2"></label>
         <span asp-validation-for="ImageUrl" class="text-danger"></span>
       </div>
-       @* <div class="col-12">
-        ModelOnly, None
-        <div asp-validation-summary="All" class="text-danger"></div>
+      @* <div class="col-12">
+      ModelOnly, None
+      <div asp-validation-summary="All" class="text-danger"></div>
       </div> *@
       <div class="col-12 mt-2">
         <div class="row">
           <div class="col-6 col-md-3">
             <button type="submit" class="btn btn-success w-100">
-              Create
+              Save
             </button>
           </div>
           <div class="col-6 col-md-3">
@@ -66,7 +66,7 @@
     </form>
   </div>
 </div>
-@section Scripts{
+@section Scripts {
   @{
     <partial name="_ValidationScriptsPartial" />
   }
