--- a/Lagoon.Web/Views/Villa/Create.cshtml
+++ b/Lagoon.Web/Views/Villa/Create.cshtml
@@ -52,7 +52,7 @@
         <div class="row">
           <div class="col-6 col-md-3">
             <button type="submit" class="btn btn-success w-100">
-              Create
+              <i class="bi bi-check-circle"></i> Create
             </button>
           </div>
           <div class="col-6 col-md-3">
