--- a/Lagoon.Web/Views/Villa/index.cshtml
+++ b/Lagoon.Web/Views/Villa/index.cshtml
@@ -1,6 +1,6 @@
 @{
   @* using Lagoon.Domain.Entity; *@
-  @model IEnumerable<Lagoon.Domain.Entity.Villa>
+  @model IEnumerable<Villa>
   @* ViewData["Title"] = "Home Page"; *@
 }
 <div class="w-100 border-0 p-4">
