--- a/Lagoon.Web/Views/Villa/Update.cshtml
+++ b/Lagoon.Web/Views/Villa/Update.cshtml
@@ -1,6 +1,6 @@
 @{
   @* using Lagoon.Domain.Entity; *@
-  @model Lagoon.Domain.Entity.Villa
+  @model Villa
   @* ViewData["Title"] = "Home Page"; *@
 }
 <div class="w-100 border-0 p-4">
