CRUD WORKING WITH REPO PATTERN

--- a/Lagoon.Web/Views/Villa/Create.cshtml
+++ b/Lagoon.Web/Views/Villa/Create.cshtml
@@ -1,12 +1,12 @@
 @{
   @model Villa
-  @* ViewData["Title"] = "Home Page"; *@
+  string Template = "Villa";
 }
 <div class="w-100 border-0 p-4">
   <div class="card-header bg-success bg-gradient ml-0 py-3">
     <div class="row">
       <div class="col-12 text-center">
-        <h1 class="text-white py-2">Create Villa</h1>
+        <h1 class="text-white py-2">Create @Template</h1>
       </div>
     </div>
   </div>
