--- a/Lagoon.Web/Views/_ViewImports.cshtml
+++ b/Lagoon.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Lagoon.Web
 @using Lagoon.Web.Models
 @using Lagoon.Domain.Entity
+@using Lagoon.Domain.VM;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
