--- a/Lagoon.Web/Views/Villa/Create.cshtml
+++ b/Lagoon.Web/Views/Villa/Create.cshtml
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="card-body border p-2">
-    <form method="post" class="row">
+    <form method="post" class="row" enctype="multipart/form-data">
      
       <div class="form-floating py-1 col-md-6">
         <input asp-for="Name" class="form-control border shadow" />
@@ -39,7 +39,8 @@
         <span asp-validation-for="Desc" class="text-danger"></span>
       </div>
       <div class="form-floating py-1 col-md-6">
-        <input asp-for="ImageUrl" class="form-control border shadow" />
+        <input asp-for="ImageUrl" hidden class="form-control border shadow" />
+        <input asp-for="Image" class="form-control border shadow" />
         <label asp-for="ImageUrl" class="ms-2"></label>
         <span asp-validation-for="ImageUrl" class="text-danger"></span>
       </div>
