--- a/Lagoon.Web/Views/Amenity/Delete.cshtml
+++ b/Lagoon.Web/Views/Amenity/Delete.cshtml
@@ -1,6 +1,7 @@
+@model Amenity
 @{
-  @model Villa
-  string Template = "Villa";
+  string Template = "Amenity";
+  @* ViewData["Title"] = "Home Page"; *@
 }
 <div class="w-100 border-0 p-4">
   <div class="card-header bg-success bg-gradient ml-0 py-3">
@@ -12,41 +13,22 @@
   </div>
   <div class="card-body border p-2">
     <form method="post" class="row">
-      <input disabled asp-for="ID" hidden />
+
       <div class="form-floating py-1 col-md-6">
+        <input disabled asp-for="VillaId" class="form-control border shadow" />
+        <label asp-for="VillaId" class="ms-2"></label>
+        <span asp-validation-for="VillaId" class="text-danger"></span>
+      </div>
+             <div class="form-floating py-1 col-md-6">
         <input disabled asp-for="Name" class="form-control border shadow" />
         <label asp-for="Name" class="ms-2"></label>
         <span asp-validation-for="Name" class="text-danger"></span>
-      </div>
-      <div class="form-floating py-1 col-md-6">
-        <input disabled asp-for="Price" class="form-control border shadow" />
-        <label asp-for="Price" class="ms-2"></label>
-        <span asp-validation-for="Price" class="text-danger"></span>
-      </div>
-      <div class="form-floating py-1 col-md-6">
-        <input disabled asp-for="Sqft" class="form-control border shadow" />
-        <label asp-for="Sqft" class="ms-2"></label>
-        <span asp-validation-for="Sqft" class="text-danger"></span>
-      </div>
-      <div class="form-floating py-1 col-md-6">
-        <input disabled asp-for="Occupancy" class="form-control border shadow" />
-        <label asp-for="Occupancy" class="ms-2"></label>
-        <span asp-validation-for="Occupancy" class="text-danger"></span>
       </div>
       <div class="form-floating py-1 col-md-6">
         <input disabled asp-for="Desc" class="form-control border shadow" />
         <label asp-for="Desc" class="ms-2"></label>
         <span asp-validation-for="Desc" class="text-danger"></span>
       </div>
-      <div class="form-floating py-1 col-md-6">
-        <input disabled asp-for="ImageUrl" class="form-control border shadow" />
-        <label asp-for="ImageUrl" class="ms-2"></label>
-        <span asp-validation-for="ImageUrl" class="text-danger"></span>
-      </div>
-      @* <div class="col-12">
-      ModelOnly, None
-      <div asp-validation-summary="All" class="text-danger"></div>
-      </div> *@
       <div class="col-12 mt-2">
         <div class="row">
           <div class="col-6 col-md-3">
@@ -55,7 +37,7 @@
             </button>
           </div>
           <div class="col-6 col-md-3">
-            <a asp-controller="Villa" asp-action="Index" type="submit" class="btn btn-success w-100">
+            <a asp-controller="Amenity" asp-action="Index" type="submit" class="btn btn-success w-100">
               <i class="bi bi-x-circle"></i>
               Cancel
             </a>
