--- a/Lagoon.Web/Views/Amenity/Update.cshtml
+++ b/Lagoon.Web/Views/Amenity/Update.cshtml
@@ -1,6 +1,6 @@
+@model VM_Amenity
 @{
-  @model Villa
-  string Template = "Villa";
+  string Template = "Amenity";
 }
 <div class="w-100 border-0 p-4">
   <div class="card-header bg-success bg-gradient ml-0 py-3">
@@ -11,48 +11,28 @@
     </div>
   </div>
   <div class="card-body border p-2">
-    <form method="post" class="row" enctype="multipart/form-data">
-      <div class="col-md-9">
-        <div class="row">
-          <input asp-for="ID" hidden />
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="Name" class="form-control border shadow" />
-            <label asp-for="Name" class="ms-2"></label>
-            <span asp-validation-for="Name" class="text-danger"></span>
-          </div>
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="Price" class="form-control border shadow" />
-            <label asp-for="Price" class="ms-2"></label>
-            <span asp-validation-for="Price" class="text-danger"></span>
-          </div>
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="Sqft" class="form-control border shadow" />
-            <label asp-for="Sqft" class="ms-2"></label>
-            <span asp-validation-for="Sqft" class="text-danger"></span>
-          </div>
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="Occupancy" class="form-control border shadow" />
-            <label asp-for="Occupancy" class="ms-2"></label>
-            <span asp-validation-for="Occupancy" class="text-danger"></span>
-          </div>
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="Desc" class="form-control border shadow" />
-            <label asp-for="Desc" class="ms-2"></label>
-            <span asp-validation-for="Desc" class="text-danger"></span>
-          </div>
-          <div class="form-floating py-1 col-md-6">
-            <input asp-for="ImageUrl" hidden class="form-control border shadow" />
-            <input asp-for="Image" class="form-control border shadow" />
-            <label asp-for="ImageUrl" class="ms-2"></label>
-            <span asp-validation-for="ImageUrl" class="text-danger"></span>
-          </div>
-        </div>
+    <form method="post" class="row">
+      <input asp-for="D.ID" hidden />
+      <div class="form-floating py-1 col-md-6">
+        <select 
+          asp-for="D.VillaId"
+          class="form-select border shadow" 
+          asp-items="@Model.VillaList">
+          <option disabled selected>--Select Villa--</option>
+        </select>
+        <label asp-for="D.VillaId" class="ms-2"></label>
+        <span asp-validation-for="D.VillaId" class="text-danger"></span>
       </div>
-      <div class="col-md-3 d-flex justify-content-center">
-        <img src="@Model.ImageUrl"
-          style="border-radius: 5px; border:1px solid black; max-width: 100%;  max-height: 300px; " />
+      <div class="form-floating py-1 col-md-6">
+        <input asp-for="D.Name" class="form-control border shadow" />
+        <label asp-for="D.Name" class="ms-2"></label>
+        <span asp-validation-for="D.Name" class="text-danger"></span>
       </div>
-
+      <div class="form-floating py-1 col-md-6">
+        <input asp-for="D.Desc" class="form-control border shadow" />
+        <label asp-for="D.Desc" class="ms-2"></label>
+        <span asp-validation-for="D.Desc" class="text-danger"></span>
+      </div>
       <div class="col-12 mt-2">
         <div class="row">
           <div class="col-6 col-md-3">
@@ -61,7 +41,7 @@
             </button>
           </div>
           <div class="col-6 col-md-3">
-            <a asp-controller="Villa" asp-action="Index" type="submit" class="btn btn-danger w-100">
+            <a asp-controller="Amenity" asp-action="Index" type="submit" class="btn btn-danger w-100">
               <i class="bi bi-x-circle"></i>
               Cancel
             </a>
