--- a/Lagoon.Web/Views/Shared/_Layout.cshtml
+++ b/Lagoon.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css"
     integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
   <!-- Option 1: Include in HTML -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -30,20 +31,32 @@
         </button>
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
           <ul class="navbar-nav flex-grow-1">
+
             <li class="nav-item">
               <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-dark" asp-area="" asp-controller="Villa" asp-action="Index">Villa</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-dark" asp-area="" asp-controller="VillaNumber" asp-action="Index">Villa Number</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link text-dark" asp-area="" asp-controller="Amenity" asp-action="Index">Amenity</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" asp-controller="Villa" asp-action="Index">Villa</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" asp-controller="VillaNumber" asp-action="Index">Villa Number</a>
+                </li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li>
+                  <a class="dropdown-item" asp-controller="Amenity" asp-action="Index">Amenity</a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -78,7 +91,7 @@
 
   <footer class="border-top footer text-muted">
     <div class="container">
-      &copy; 2024 - Lagoon.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+      &copy; 2024 - Lagoon.Web - <a asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     @* <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
@@ -88,6 +101,8 @@
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" async></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" async></script>
 </body>
 
 </html>
