--- a/Lagoon.Web/Views/Home/Index.cshtml
+++ b/Lagoon.Web/Views/Home/Index.cshtml
@@ -1,8 +1,99 @@
-﻿@{
-  ViewData["Title"] = "Home Page";
-}
+﻿@model VM_Home;
+<style>
+  .carousel-item img {
+    max-height: 300px !important;
+    max-width: 600px !important;
+  } 
+</style>
+<div>
+  <div id="homeCarousel" class="carousel slide carousel-dark" style="height: 300px;">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0" class="active"
+        aria-current="true"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="3" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="4" aria-label="Slide 4"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active " data-bs-interval="400">
+        <img src="/home/1.webp" class="d-block w-100">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="400">
+        <img src="/home/2.webp" class="d-block w-100">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="400">
+        <img src="/home/3.webp" class="d-block w-100">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="400">
+        <img src="/home/4.webp" class="d-block w-100">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Forth slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="400">
+        <img src="/home/5.webp" class="d-block w-100">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Fifth slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#homeCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
-<div class="text-center">
-  <h1 class="display-4">Welcome</h1>
-  <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+  <form method="post" asp-action="GetVillasByDate">
+    <div class="row p-0 mx-0 py-4">
+
+      <div class="col-12 col-md-5  offset-md-1 pl-2  pr-2 pr-md-0">
+        <div class="form-group">
+          <label>Check In Date</label>
+          <input asp-for="CheckInDate" type="date" class="form-control" />
+        </div>
+      </div>
+
+      <div class="col-8 col-md-3 pl-2 pr-2">
+        <div class="form-group">
+          <label>No. of nights</label>
+          <select class="form-select" asp-for="Night">
+            @for (var i = 1; i < 11; i++)
+            {
+              <option value="@i">@i</option>
+            }
+          </select>
+        </div>
+      </div>
+
+      <div class="col-4 col-md-2 pt-4 pr-2">
+        <div class="form-group">
+          <button type="button" onclick="fnLoadVillaList()" class="btn btn-success btn-block">
+            <i class="bi bi-search"></i> &nbsp; Check Availability
+          </button>
+
+        </div>
+      </div>
+
+    </div>
+    <partial name="_VillaList" model="Model" />
+  </form>
 </div>
