--- a/Lagoon.Web/Views/Shared/_Layout.cshtml
+++ b/Lagoon.Web/Views/Shared/_Layout.cshtml
@@ -39,11 +39,11 @@
               <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="#" id="contentMgmt" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Dropdown
+                Content Mgmt
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <ul class="dropdown-menu" aria-labelledby="contentMgmt">
                 <li>
                   <a class="dropdown-item" asp-controller="Villa" asp-action="Index">Villa</a>
                 </li>
